"Updated application layout and footer styles"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -315,8 +315,8 @@ a {
 /* フッター */
 
 .footer {
-  height: 50px;
-  background-color: #999;
+  height: 70px;
+  background-color: black;
   padding: 10px 0;
 }
 .copyright {
