--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -616,12 +616,33 @@ a {
 // Gears_show
 
 .gear-box-img {
-  height: 50vh;
-  width: 60vw;
+  width: 100%;
+  max-width: 60vw;
+  height: auto;
+  max-height: 50vh;
   min-height: 500px;
   background-color: rgb(205, 202, 202);
   object-fit: contain;
 }
+
+/* Smaller devices (tablets, 768px and down) */
+@media (max-width: 768px) {
+  .gear-box-img {
+    max-width: 80vw;
+    max-height: 40vh;
+    min-height: 400px;
+  }
+}
+
+/* Small devices (phones, 600px and down) */
+@media (max-width: 600px) {
+  .gear-box-img {
+    max-width: 90vw;
+    max-height: 30vh;
+    min-height: 300px;
+  }
+}
+
 
 .gear-box-img-pre {
   height: 50vh;
