--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
     <footer class="container-fluid footer text-center">
       <p class="copyright d-inline">Copyright © CampShare All rights reserved.</p><br>
-      <%= link_to "プライバシーポリシー", privacy_policy_path, target: "_blank", class: "ms-2 text-white d-inline" %>
+      <%= link_to "プライバシーポリシー", privacy_policy_path, target: "_blank", class: "ms-2 text-primary d-inline" %>
     </footer>
   </body>
 </html>
