--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -50,12 +50,14 @@
       <%= f.date_field :end_date, class: 'date-select form-control datepicker', id: 'end-date' %>
     </div>
 
-    <div class="container text-center mb-5">
+    <div class="container-fluid text-center mb-5">
       <p class="h2 mb-3 fw-semibold">お客様のプランと金額は下記となります。</p>
       <p class="h5 mb-3 fst-italic text-danger" id="caution">※予約日程を入力しないと表示されません。</p>
-      <div class="d-flex justify-content-center">
-        <span class="fs-5" id="selected-plan"></span>
-        <span class="fs-5" id="selected-price"></span><span class="fs-5" id="currency"></span>
+      <div class="d-grid">
+        <span class="fs-5 mx-auto" id="selected-plan"></span>
+        <div class="d-flex justify-content-center">
+          <span class="fs-5 me-1" id="selected-price"></span><span class="fs-5" id="currency"></span>
+        </div>
       </div>
       <%= f.hidden_field :price, id: "price-parameter" %>
     </div>
@@ -86,7 +88,7 @@
       </div>
     </div>
 
-    <div class="container w-50">
+    <div class="container-fluid">
       <div class='credit-card-form'>
         <h1 class='info-input-headline text-center fw-semibold mb-5'>
           クレジットカード情報入力
