"Updated button styles and layout in gears/show, orders/edit, and users/show views"

--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -57,12 +57,12 @@
   <% if user_signed_in? %>
   <%# owner 専用 button %>
     <% if current_user.id == @gear.user_id %>
-        <%= link_to "ギアの編集", edit_gear_path(@gear), method: :get, class: "btn btn-primary btn-lg col-6 mx-auto" %>
+        <%= link_to "ギアの編集", edit_gear_path(@gear), method: :get, class: "btn btn-primary btn-lg col-5 mx-auto" %>
         <span class="fs-5 me-3">or</span>
         <%= link_to "削除", gear_path(@gear), data: {turbo_method: :delete}, class:"btn btn-danger btn-lg col-5 mx-auto" %>
       <% if @gear.order.present?%>
         <span class="fs-5 me-3">or</span>
-        <%= link_to "予約状況を管理する", "/gears/#{@gear.id}/orders/#{@gear.order.id}/edit", data: {turbo_method: :get}, class:"btn btn-success btn-lg col-6 mx-auto" %>
+        <%= link_to "予約管理", "/gears/#{@gear.id}/orders/#{@gear.order.id}/edit", data: {turbo_method: :get}, class:"btn btn-success btn-lg col-5 mx-auto" %>
       <% end %>
     <% else %>
     <%# customer 専用 button %>
