--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,10 @@
   <div class="container row">
     <div class="col-md-3">
       <% if @user.profile_image.attached? %>
-          <%= image_tag @user.profile_image, class: "img-thumbnail", size: "160x160" %>
-        <% end %>
+        <%= image_tag @user.profile_image, class: "img-thumbnail", size: "160x160" %>
+      <% else %>
+        <%= image_tag 'dummy_profile_image.jpg', class: "img-thumbnail", size: "160x160" %>
+      <% end %>
     </div>
     <div class="col-md-9 mt-3">
       <p class="mb-2"><span class="fw-bold">名前：　</span><%= @user.name %></p>
