--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -132,15 +132,15 @@
   <%# プライバシーポリシーへのリンクと同意チェックボックス %>
 
   <%# 登録ボタン %>
-  <div class="text-center mb-3">
-    <%= f.submit "新規登録", class: :form__btn  %>
+  <div class="container-fluid text-center mb-3">
+    <%= f.submit "新規登録", class: "btn btn-primary col-3 mx-auto p-1"  %>
   </div>
   <%# 登録ボタン %>
   <% end %>
 
   <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <div class="text-center">
+    <div class="container-fluid text-center">
       <%= button_to "#{OmniAuth::Utils.camelize(provider)}アカウントで登録",
                     omniauth_authorize_path(resource_name, provider, privacy_policy: 1),
                     data: { turbo: false },
