"Updated application.scss to adjust gear-box-img-pre styles for different screen sizes and added alert class to error_explanation div in new.html.erb"

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <!-- エラーメッセージの表示 -->
   <div class="container mb-5">
     <% if @user.errors.any? %>
-      <div id="error_explanation">
+      <div id="error_explanation" class="alert alert-danger">
         <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
         <ul>
           <% @user.errors.full_messages.each do |message| %>
