--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -94,8 +94,11 @@
   </table>
 </div>
 
-<div class="container text-center mb-5">
-  <p class="fs-5"><%= @gear.info %></p>
+<div class="container mb-3">
+  <p class="h3 mb-5">
+    ギア紹介:
+  </p>
+  <%= @gear.info %>
 </div>
 
 
