"Updated HTML structure and styling in gears show view"

--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -94,10 +94,10 @@
   </table>
 </div>
 
-<div class="container mb-3">
-  <p class="h3 mb-5">
-    ギア紹介:
-  </p>
+<div class="container mb-3 w-75">
+  <h1 class="h3 mb-5 text-center">
+    ギア紹介
+  </h1>
   <%= @gear.info %>
 </div>
 
